fix spacing

--- a/src/pages/friends.module.css
+++ b/src/pages/friends.module.css
@@ -24,5 +24,16 @@
   flex-direction: column;
   align-items: center;
   overflow-y: scroll;
-  width: 90%;
+}
+
+@media only screen and (max-width: 420px) {
+  .posts{
+    width: 105%;
+  }
+}
+
+@media only screen and (min-width: 420px) {
+  .posts{
+    width: 90%;
+  }
 }
