--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -87,7 +87,7 @@
   background-color: white;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   height: 70%;
-  width: 70%;
+  width: 90%;
 }
 
 .friend-card h2 {
